fix: components overflow #128

--- a/apps/docs/app/global.css
+++ b/apps/docs/app/global.css
@@ -1,7 +1,7 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 
-@import 'fumadocs-ui/css/neutral.css';
-@import 'fumadocs-ui/css/preset.css';
+@import "fumadocs-ui/css/neutral.css";
+@import "fumadocs-ui/css/preset.css";
 @import "tw-animate-css";
 
 @source '../node_modules/fumadocs-ui/dist/**/*.js';
@@ -171,7 +171,9 @@
   --color-fd-ring: var(--ring);
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   @apply tracking-tight;
 }
 
@@ -202,4 +204,8 @@ h1, h2, h3 {
 
 #nd-sidebar [data-hide-if-empty] {
   @apply hidden;
+}
+
+.prose {
+  overflow: auto;
 }
